organizando imagens e adicionando href aos links do menu

--- a/public/index.html
+++ b/public/index.html
@@ -52,29 +52,29 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0 fw-bold text-center">
                     <li class="nav-item p-2">
-                        <a class="nav-link text-primary active" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link text-primary active" aria-current="page" href="#home">HOME</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#">COMO PARTICIPAR</a>
-                    </li>
-
-                    <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#">PREMIOS</a>
+                        <a class="nav-link text-primary" href="#como-participar">COMO PARTICIPAR</a>
                     </li>
 
                     <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#">PRODUTOS PARTICIPANTES</a>
+                        <a class="nav-link text-primary" href="#premios">PREMIOS</a>
                     </li>
 
                     <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#">RECEITAS</a>
-                    </li>
-                    <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#">PILULAS NBA</a>
+                        <a class="nav-link text-primary" href="#produtos-participantes">PRODUTOS PARTICIPANTES</a>
                     </li>
 
                     <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#">GANHADORES</a>
+                        <a class="nav-link text-primary" href="#receitas">RECEITAS</a>
+                    </li>
+                    <li class="nav-item p-2">
+                        <a class="nav-link text-primary" href="#pilulas">PILULAS NBA</a>
+                    </li>
+
+                    <li class="nav-item p-2">
+                        <a class="nav-link text-primary" href="#ganhadores">GANHADORES</a>
                     </li>
                     <li class="nav-item p-2 dropdown bg-primary">
                         <a class="nav-link text-primary dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -117,8 +117,8 @@
 
     <div class="rounded-pill p-2 bg-dark" id="premios">
         <div class="border border-primary border-5 rounded-pill text-center">
-            <img src="./build/images/premios.png" alt="Premios" class="w-100 p-5 d-none d-lg-block">
-            <img src="./build/images/premios-mob.png" alt="Premios" class="w-100 p-5 d-block d-lg-none">
+            <img src="./build/images/premios/premios.png" alt="Premios" class="w-100 p-5 d-none d-lg-block">
+            <img src="./build/images/premios/premios-mob.png" alt="Premios" class="w-100 p-5 d-block d-lg-none">
         </div>
     </div>
 
@@ -127,37 +127,37 @@
             <h2 class="text-white text-decoration-underline">COMO PARTICIPAR</h2>
             <div class="row mt-5">
                 <div class="col-6 col-lg-3">
-                    <img src="./build/images/passo-1.png" alt="Passo 1" class="img-fluid">
+                    <img src="./build/images/como-participar/passo-1.png" alt="Passo 1" class="img-fluid">
                 </div>
                 <div class="col-6 col-lg-3">
-                    <img src="./build/images/passo-2.png" alt="Passo 2" class="img-fluid">
+                    <img src="./build/images/como-participar/passo-2.png" alt="Passo 2" class="img-fluid">
                 </div>
                 <div class="col-6 col-lg-3">
-                    <img src="./build/images/passo-3.png" alt="Passo 3" class="img-fluid">
+                    <img src="./build/images/como-participar/passo-3.png" alt="Passo 3" class="img-fluid">
                 </div>
                 <div class="col-6 col-lg-3">
-                    <img src="./build/images/passo-4.png" alt="Passo 4" class="img-fluid">
+                    <img src="./build/images/como-participar/passo-4.png" alt="Passo 4" class="img-fluid">
                 </div>
             </div>
             <div class="row mt-5 justify-content-center">
                 <div class="col-6 col-lg-3 d-flex">
-                    <img src="./build/images/extra-1.png" alt="Extra 1" class="img-fluid align-self-end">
+                    <img src="./build/images/como-participar/extra-1.png" alt="Extra 1" class="img-fluid align-self-end">
                 </div>
                 <div class="col-6 col-lg-3 d-flex">
-                    <img src="./build/images/extra-2.png" alt="Extra 2" class="img-fluid align-self-end">
+                    <img src="./build/images/como-participar/extra-2.png" alt="Extra 2" class="img-fluid align-self-end">
                 </div>
                 <div class="col-12 col-lg-5 d-flex">
-                    <img src="./build/images/extra-3.png" alt="Extra 3" class="w-100 align-self-end">
+                    <img src="./build/images/como-participar/extra-3.png" alt="Extra 3" class="w-100 align-self-end">
                 </div>
             </div>
             <div class="col-12">
-                <img src="./build/images/extra-4.png" alt="Extra 4" class="img-fluid">
+                <img src="./build/images/como-participar/extra-4.png" alt="Extra 4" class="img-fluid">
             </div>
             <a href="#" class="btn btn-secondary btn-xlg rounded-pill shadow fw-bolder text-primary">PARTICIPE</a>
         </div>
     </div>
 
-    <div class="rounded-pill p-2 bg-dark" id="premios">
+    <div class="rounded-pill p-2 bg-dark" id="galeria">
         <div class="border border-primary border-5 rounded-pill text-center">
             <div class="container">
                 <h3 class="text-secondary fw-bolder mt-4">COMPRE, JUNTE E TROQUE</h3>
