--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                     </li>
 
                     <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#premios">PREMIOS</a>
+                        <a class="nav-link text-primary" href="#premios">PRÊMIOS</a>
                     </li>
 
                     <li class="nav-item p-2">
@@ -70,7 +70,7 @@
                         <a class="nav-link text-primary" href="#receitas">RECEITAS</a>
                     </li>
                     <li class="nav-item p-2">
-                        <a class="nav-link text-primary" href="#pilulas">PILULAS NBA</a>
+                        <a class="nav-link text-primary" href="#pilulas">PÍLULAS NBA</a>
                     </li>
 
                     <li class="nav-item p-2">
@@ -78,7 +78,7 @@
                     </li>
                     <li class="nav-item p-2 dropdown bg-primary">
                         <a class="nav-link text-primary dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            OLA, ANA
+                            OLÁ, ANA
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">MEU PERFIL</a></li>
@@ -92,7 +92,7 @@
     <header class="px-3 pt-3 px-md-5 pt-md-5" id="home"  style="background-image: url('./build/images/bg-azul.jpg');">
         <div class="row d-lg-flex d-none">
             <div class="col-4">
-                <img src="./build/images/logo-promo.png" alt="Logo Promocao">
+                <img src="./build/images/logo-promo.png" alt="Logo Promoção">
             </div>
             <div class="col-8 d-flex">
                 <div class="col-12 d-flex justify-content-between flex-column">
@@ -103,7 +103,7 @@
                         <a href="#" class="btn btn-secondary btn-xlg rounded-pill shadow fw-bolder text-primary align-self-center">PARTICIPE</a>
                     </div>
                     <div class="align-self-end mx-auto">
-                        <img src="./build/images/produtos-home.png" alt="Logo Promocao" class="img-fluid">
+                        <img src="./build/images/produtos-home.png" alt="Logo Promoção" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                             </li>
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link fw-bolder rounded-pill" id="tabua-tab" data-bs-toggle="tab" data-bs-target="#tabua" type="button" role="tab" aria-controls="tabua" aria-selected="false">
-                                    TABUA
+                                    TÁBUA
                                 </button>
                             </li>
                         </ul>
@@ -208,7 +208,7 @@
 
     <div class="container text-white text-center py-5" id="video">
         <h3>
-            DOS DRIBLES E ENTERRADAS MEMORAVEIS AO ZERAR DO CRONOMETRO,
+            DOS DRIBLES E ENTERRADAS MEMORÁVEIS AO ZERAR DO CRONÔMETRO,
         </h3>
         <h3>
             <span class="fw-bold">CADA HORA H DA NBA FICA AINDA MAIS SABOROSA COM HELLMANN'S.</span>
@@ -232,7 +232,7 @@
                 <div class="card-circle">
                     <img src="./build/images/compre-agora/pda.png" alt="Pao de acucar" class="img-fluid">
                 </div>
-                <a href="#" class="btn btn-secondary d-block btn-lg rounded-pill shadow fw-bolder text-primary align-self-center mt-3">DUVIDAS</a>
+                <a href="#" class="btn btn-secondary d-block btn-lg rounded-pill shadow fw-bolder text-primary align-self-center mt-3">GPA</a>
             </div>
             <div class="mt-5 mx-3 text-center">
                 <div class="card-circle">
@@ -251,7 +251,7 @@
         <div class="container">
             <div class="d-flex justify-content-center">
                 <div class="mt-5 px-3 text-center">
-                    <a href="#" class="text-decoration-none fw-bold text-white align-self-center mt-3">DUVIDAS</a>
+                    <a href="#" class="text-decoration-none fw-bold text-white align-self-center mt-3">DÚVIDAS</a>
                 </div>
                 <div class="mt-5 px-3 text-center">
                     <a href="#" class="text-decoration-none fw-bold text-white align-self-center mt-3">REGULAMENTO</a>
